@@ -1,3 +1,9 @@
+2006-05-23  MenTaLguY  <mental@rydia.net>
+
+	* src/extension/internal/ps.cpp:
+
+	  move %%EOF to end of output document
+
 2006-05-22  Jon A. Cruz  <jon@joncruz.org>
 
 	* src/dialogs/swatches.cpp, src/ui/widget/panel.cpp,
